--- a/index.html
+++ b/index.html
@@ -65,9 +65,15 @@
     }
 
     .navbar-logo {
-      height: 40px;
+      height: 48px;
       width: auto;
-      filter: drop-shadow(0 0 8px rgba(56, 189, 248, 0.2));
+      border-radius: 8px;
+      box-shadow: 0 0 12px rgba(255, 255, 255, 0.1);
+      transition: transform 0.3s;
+    }
+
+    .navbar-logo:hover {
+      transform: scale(1.05);
     }
 
     .navbar-links {
@@ -143,10 +149,12 @@
     }
 
     .logo-hero {
-      width: 200px;
-      margin-bottom: 24px;
+      width: 220px;
+      margin-bottom: 32px;
       animation: fadeDown 1s ease-out;
-      filter: drop-shadow(0 10px 20px rgba(0, 0, 0, 0.3));
+      border-radius: 16px;
+      box-shadow: 0 0 30px rgba(56, 189, 248, 0.15);
+      border: 1px solid rgba(255, 255, 255, 0.1);
     }
 
     header h1 {
